<resources>
    <string name="app_name">PendaftaranApps</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="nama">Nama</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>"
    <string name="alamat">Alamat</string>
    <string name="agama">Agama</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="error">Tidak Boleh Kosong!!</string>
    <string name="update">Update</string>
</resources>